Fix warnings in PlatformDisplaySkia for PlayStation https://bugs.webkit.org/show_bug.cgi?id=274106

Unreviewed build fix.

Fix unused warnings for a build config.

* Source/WebCore/platform/graphics/skia/PlatformDisplaySkia.cpp:

Canonical link: https://commits.webkit.org/278705@main